# Ryze

./: .gitignore  CLAUDE.md  README.md  launch_app.py  pyproject.toml  requirements.txt  start.sh
configs/: default_config.json  default_config_v2.json  default_config_v2.py
demo/: page1_figure_reader.py
ryze_demo/: index.html
scripts/: example_pipeline.py  smoke_test_multi_gpu.py  smoke_test_pipeline.py  smoke_test_pipeline_legacy.py
src/: __init__.py
src/data/: __init__.py  dataset.py  ocr.py  processor.py
src/eval/: __init__.py  benchmark.py  evaluator.py  metrics.py
src/figure/: read_figure.py
src/rl/: __init__.py  dataset_loader.py  grpo_trainer.py  lora_utils.py  rl_trainer.py  sft_lora_trainer.py  sft_trainer.py
src/ryze/: __init__.py  config.py  exceptions.py
src/ryze/cluster/: __init__.py  grpo_actors.py  pylet_manager.py  ray_execution_wrapper.py  ray_job_client.py  ray_manager.py  resource.py  swarm_client.py
src/ryze/core/: __init__.py  pipeline.py  progress.py  runner.py  task.py
src/ryze/data/: __init__.py  dataset.py  ocr.py  processor.py
src/ryze/eval/: __init__.py  benchmark.py  evaluator.py  metrics.py
src/ryze/figure/: read_figure.py
src/ryze/rl/: __init__.py  dataset_loader.py  grpo_trainer.py  (+4 more)
src/ui/: __init__.py  app.py  app_v2.py  components.py  components_v2.py
tests/: conftest.py
tests/e2e/: test_distributed_pipeline.py  test_local_pipeline.py
tests/integration/: test_cluster_integration.py  test_pipeline_stages.py  test_smoke_pipeline.py  test_task_lifecycle.py
tests/unit/: test_config.py  test_exceptions.py
(+25 files in other folders)
